--- a/ottojo-calculator.cabal
+++ b/ottojo-calculator.cabal
@@ -75,7 +75,8 @@ executable ottojo-calculator
         text ^>=2.1.2,
         utility-ht ^>=0.0.17.2,
         regex-pcre ^>=0.95.0.0,
-        regex-base ^>=0.94.0.2
+        regex-base ^>=0.94.0.2,
+        containers ^>=0.7
 
     -- Directories containing source files.
     hs-source-dirs:   app
